--- a/about.html
+++ b/about.html
@@ -34,13 +34,13 @@
             <h3>송명석</h3>
             <p>91812543</p>
             <p>백엔드 & 블록체인 개발</p>
-            <p><a href="https://github.com/JoongBuGit">GitHub</a> | <a href="#">Portfolio</a></p>
+            <p><a href="https://github.com/JoongBuGit">GitHub</a> | <a href="https://web-programming-project-tau.vercel.app/">Portfolio</a></p>
           </div>
           <div class="team-member">
             <h3>김용섭</h3>
             <p>91906734</p>
             <p>프론트엔드 개발</p>
-            <p><a href="https://github.com/yongseop712">GitHub</a> | <a href="#">Portfolio</a></p>
+            <p><a href="https://github.com/yongseop712">GitHub</a> | <a href="https://yongseop123.vercel.app/">Portfolio</a></p>
           </div>
           <div class="team-member">
             <h3>최정빈</h3>
