팀원 포트폴리오 링크 업데이트

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <h3>송명석</h3>
             <p>91812543</p>
             <p>백엔드 & 블록체인 개발</p>
-            <p><a href="https://github.com/JoongBuGit">GitHub</a> | <a href="https://web-programming-project-tau.vercel.app/">Portfolio</a></p>
+            <p><a href="https://github.com/JoongBuGit">GitHub</a> | <a href="http://52.231.101.23:3000/projects_test">Portfolio</a></p>
           </div>
           <div class="team-member">
             <h3>김용섭</h3>
